Added data requests

--- a/index.html
+++ b/index.html
@@ -19,6 +19,8 @@
                 <input id="user-input" class="form-control" placeholder="Enter city..." required/>
                 <button onclick="getWeather()" class="btn btn-light">Search</button>
             </div>
+            <div id="error" class="fs-6 text-light"></div>
+            <img id="weather-icon" class="rounded mx-auto d-block"/>
         </div>
     </div> 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
