--- a/index.html
+++ b/index.html
@@ -20,7 +20,20 @@
                 <button onclick="getWeather()" class="btn btn-light">Search</button>
             </div>
             <div id="error" class="fs-6 text-light"></div>
-            <img id="weather-icon" class="rounded mx-auto d-block"/>
+            <img id="weather-icon" class="rounded mx-auto d-none" alt="Weather Icon"/>
+            <p id="weather-temp" class="fs-1 fw-bold text-light text-center"></p>
+            <p id="weather-city" class="fs-3 fw-semibold text-light text-center "></p>
+            <p id="weather-discription" class="fs-5 fw-medium text-light text-center text-capitalize"></p>
+            <div  class="d-flex gap-3 justify-content-between align-items-center">
+              <div class="d-flex align-items-center justify-content-center gap-3">
+                <img  id="weather-humidity-icon"  class="d-none" src="./assets/humidity-icon.png"  alt="Humidity Icon">
+                <p id="weater-humidity-info" class="fs-5 fw-medium text-light m-auto"></p>
+              </div>
+              <div class="d-flex align-items-center justify-content-center gap-3">
+                <img id="weather-wind-icon" class="d-none" src="./assets/wind-icon.png"  alt="Wind Icon" width="64px">
+                <p id="weater-wind-info" class="fs-5 fw-medium text-light m-auto"></p>
+              </div>
+            </div>
         </div>
     </div> 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
